--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,15 @@
 
     <main id="content" class="main-content" role="main">
       {{ content }}
+      
+      <h2>Blog</h2>
+      <ul>
+        {% for post in site.posts %}
+          <li>
+            <a href="{{ post.url }}">{{ post.title }}</a>
+          </li>
+        {% endfor %}
+      </ul>
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
